generate correct openapi docs
