# cmd/vacation-api/main.go
@@ -1,8 +1,10 @@
 package main
 
 import (
+	"context"
 	"log"
 	"net"
+	"net/http"
 	"os"
 
 	"github.com/Dmitriy-M1319/vacation-api/internal/api/rpc"
@@ -10,13 +12,48 @@ import (
 	"github.com/Dmitriy-M1319/vacation-api/internal/repository"
 	"github.com/Dmitriy-M1319/vacation-api/internal/repository/interfaces"
 	pb "github.com/Dmitriy-M1319/vacation-api/pkg/vacation_api/v1"
+	"github.com/grpc-ecosystem/grpc-gateway/runtime"
 	"github.com/joho/godotenv"
 	"google.golang.org/grpc"
+	"google.golang.org/grpc/credentials/insecure"
 )
 
 var employeeRepo interfaces.EmployeeRepository
 var vacationRepo interfaces.VacationRepository
 var vacationNormRepo interfaces.VacationNormRepository
+
+func runGrpcServer() {
+	sock, err := net.Listen("tcp", ":12201")
+	if err != nil {
+		log.Fatalf("failed to listen port: %v", err)
+	}
+
+	grpcServer := grpc.NewServer()
+	service := rpc.NewRpcService(employeeRepo, vacationRepo, vacationNormRepo)
+
+	pb.RegisterVacationsServiceServer(grpcServer, service)
+	err = grpcServer.Serve(sock)
+
+	if err != nil {
+		log.Fatalf("Error starting server: %v", err)
+	}
+}
+
+func runGrpcGatewayRest() {
+	ctx := context.Background()
+	ctx, cancel := context.WithCancel(ctx)
+	defer cancel()
+	mux := runtime.NewServeMux()
+	opts := []grpc.DialOption{grpc.WithTransportCredentials(insecure.NewCredentials())}
+	err := pb.RegisterVacationsServiceHandlerFromEndpoint(ctx, mux, "localhost:12201", opts)
+	if err != nil {
+		panic(err)
+	}
+	log.Printf("server listening at 8081")
+	if err := http.ListenAndServe(":8081", mux); err != nil {
+		panic(err)
+	}
+}
 
 func main() {
 	err := godotenv.Load()
@@ -44,71 +81,6 @@ func main() {
 		log.Fatal(err)
 	}
 
-	// gRPC server
-	lis, err := net.Listen("tcp", "[::1]:8080")
-	if err != nil {
-		log.Fatalf("failed to listen: %v", err)
-	}
-
-	grpcServer := grpc.NewServer()
-	service := rpc.NewRpcService(employeeRepo, vacationRepo, vacationNormRepo)
-
-	pb.RegisterVacationsServiceServer(grpcServer, service)
-	err = grpcServer.Serve(lis)
-
-	if err != nil {
-		log.Fatalf("Error strating server: %v", err)
-	}
-
-	// ctx := context.Background()
-	// httpRouter := gin.Default()
-	// httpRouter.Use(cors.Default())
-
-	// employeeHandler := http.NewEmployeeHandlers(employeeRepo)
-	// httpRouter.GET("/employees", employeeHandler.GetAll)
-	// httpRouter.GET("/employees/:id", employeeHandler.GetById)
-	// httpRouter.POST("/employees", employeeHandler.Insert)
-	// httpRouter.PUT("/employees/:id", employeeHandler.Update)
-	// httpRouter.DELETE("/employees/:id", employeeHandler.Delete)
-
-	// vacationHandler := http.NewVacationHandlers(vacationRepo)
-	// httpRouter.GET("/vacations", vacationHandler.GetAll)
-	// httpRouter.GET("/vacations/:id", vacationHandler.GetById)
-	// httpRouter.GET("/employees/:id/vacations", vacationHandler.GetByEmployeeId)
-	// httpRouter.POST("/vacations", vacationHandler.Insert)
-	// httpRouter.PUT("/vacations/:id", vacationHandler.Update)
-	// httpRouter.DELETE("/vacations/:id", vacationHandler.Delete)
-
-	// normHandler := http.NewVacationNormHandlers(vacationNormRepo)
-	// httpRouter.GET("/norms", normHandler.GetAll)
-	// httpRouter.GET("/norms/:id", normHandler.GetById)
-	// httpRouter.POST("/norms", normHandler.Insert)
-	// httpRouter.PUT("/norms/:id", normHandler.Update)
-	// httpRouter.DELETE("/norms/:id", normHandler.Delete)
-
-	// httpRouter.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-
-	// server := &http2.Server{
-	// 	Addr:    "localhost:8081",
-	// 	Handler: httpRouter.Handler(),
-	// }
-
-	// go func() {
-	// 	err := server.ListenAndServe()
-	// 	if err != http2.ErrServerClosed {
-	// 		log.Fatal(err.Error())
-	// 	}
-	// }()
-
-	// notifChan := make(chan os.Signal, 1)
-	// signal.Notify(notifChan, syscall.SIGINT, syscall.SIGTERM)
-	// _ = <-notifChan
-
-	// closeCtx, cancel := context.WithTimeout(ctx, time.Second*10)
-	// defer cancel()
-
-	// err = server.Shutdown(closeCtx)
-	// if err != nil {
-	// 	log.Fatalf("Failed to complete graceful shutdown: %v\n", err)
-	// }
+	go runGrpcGatewayRest()
+	runGrpcServer()
 }
